--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,11 @@
     <string name="baseball">Baseball</string>
     <string name="tennis">Tennis</string>
     <string name="volleyball">Volleyball</string>
+    <string name="livescore">LiveScore</string>
+    <string name="home">Home</string>
+    <string name="discovery">Discovery</string>
+    <string name="standings">Standings</string>
+    <string name="my_profile">My Profile</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
