finishing home Screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,12 @@
     <string name="_20_109_464_2577">+20 109 464 2577</string>
     <string name="ahmedtramadan4_gmail_com">ahmedtramadan4@gmail.com</string>
     <string name="name">Name</string>
+    <string name="cookies_you_want">Cookies You Want</string>
+    <string name="spain">Spain</string>
+    <string name="la_liga">La Liga</string>
+    <string name="_2_0">2          –          0</string>
+    <string name="ht">HT</string>
+    <string name="_4_2">4          –          2</string>
+    <string name="premier_league">Premier League</string>
+    <string name="england">England</string>
 </resources>
