adding last updating for Exporting fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,24 @@
     <string name="_4_2">4          –          2</string>
     <string name="premier_league">Premier League</string>
     <string name="england">England</string>
+    <string name="search_for_news_team_match_etc">Search for news, team, match, etc...</string>
+    <string name="todo">Todo</string>
+    <string name="_04_jan_2021_14_16">04 JAN 2021, 14:16 pm</string>
+    <string name="roumor_has_it_lampard_s_position_under_threat">Roumor Has It: Lampard’s position under threat, ...</string>
+    <string name="ideal_arsenal_tipped_to_sign_inter_and_ucl_winning_duo_on_free_transfers">\'Ideal\': Arsenal tipped to sign Inter and UCL-winning duo on free transfers</string>
+    <string name="_04_jan_2021_05_30">04 JAN 2021, 05:30 am</string>
+    <string name="_04_jan_2021_07_44">04 JAN 2021, 07:44 pm</string>
+    <string name="los_leones_host_rc_ernesto_admitted_the_lions_need_to_win_all_three_points">Los Leones host RC Ernesto admitted the Lions need to win all three points.</string>
+    <string name="barcelona_secure_1_5bn_in_funds_to_begin_avant_garde_camp_nou_renovation">Barcelona secure €1.5bn in funds to begin \'avant-garde\' Camp Nou renovation</string>
+    <string name="_05_jan_2021_10_50_pm">05 JAN 2021, 10:50 pm</string>
+    <string name="trending_news">Trending News</string>
+    <string name="news">News</string>
+    <string name="vinicius_jr_says_racism_is_normal_in_laliga">Vinicius Jr says racism is \'normal\' in LaLiga</string>
+    <string name="sunday_21_may_2023_22_31_uk">Sunday 21 May 2023 22:31, UK</string>
+    <string name="man_city_champions_pep_guardiola_s">Man City champions: Pep Guardiola\'s</string>
+    <string name="sunday_21_may_2023_12_33_uk">Sunday 21 May 2023 12:33, UK</string>
+    <string name="friday_19_may_2023_07_54_uk">Friday 19 May 2023 07:54, UK</string>
+    <string name="josko_gvardiol_charting_rise_of_rb_leipzig_defender">Josko Gvardiol: Charting rise of RB Leipzig defender</string>
+    <string name="rise_of_napoli_winger_compared_to_diego_maradona">Rise of Napoli winger compared to Diego Maradona</string>
+    <string name="tuesday_18_april_2023_11_03_uk">Tuesday 18 April 2023 11:03, UK</string>
 </resources>
